Fix alignment on arrows for collapsing/expanding categories in the filtering panel- PT Issue 83566454

--- a/app/assets/stylesheets/brandscopic.css.scss
+++ b/app/assets/stylesheets/brandscopic.css.scss
@@ -2736,6 +2736,7 @@ ul.ui-widget-content{
 			}
 			span {
 				margin-right: 5px;
+				margin-top: 3px;
 				&.icon-arrow-down:before {
 					padding-top: 5px;
 					vertical-align: middle;
